# nsight-reportgen

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
briefs/: attendo.md
chart_lab/: AGENT_GENERIC.md  AGENT_INSTRUCTIONS.md  COMPARISON.md  GRAPHS_HOWTO.md  GRAPH_TOOLS.md  ITERATIONS.md  JUDGMENT.md  TOOLS_GENERIC.md  agent_assemble_deck.py  agent_assemble_deck20.py  agent_build_awareness.py  agent_build_brandimage.py  agent_build_opinion.py  agent_build_radar.py  agent_build_structural.py  agent_build_trend.py  agent_build_words.py  agent_content_demographics.py  agent_content_spontaneous.py  agent_content_willingness.py  agent_dense_awareness.py  agent_dense_brandimage.py  agent_dense_opinion.py  agent_dense_words.py  agent_validate_opinion.py  agent_var_awareness.py  agent_var_image.py  agent_var_wordsop.py  brandimage_attendo_waves.json  build_deck.py  demographics_idx10.json  demographics_idx9.json  demographics_overview.json  desc_GENERIC.md  desc_awareness.md  desc_awareness_dense.md  desc_brandimage.md  desc_brandimage_dense.md  desc_demographics.md  desc_opinion.md  (+29 more)
deploy/: Caddyfile
docs/: COVERAGE.md  PRICING.md  RISKS.md  STATUS-AND-ARCHITECTURE.md  datahive-phase4-handoff.md  deploy-staging-upcloud.md  remediation-quality-ux.md
input/: Attendo Bränditutkimus Marraskuu 2025.pptx  spss AttendoSuomi-Brandiseuranta_112025.sav  spss Synsam_segmenteillä_vainvalittu_segmmalli.sav
scripts/: chart_sweep.py  chart_visual_samples.py  construction_proof.py  egohive_smoke.py  (+3 more)
(+437 files in other folders)
