[project]
name = "nsight"
version = "0.1.0"
description = "Automated nSight market-research deck generation"
requires-python = ">=3.11"
dependencies = [
    "pyreadstat>=1.2",
    "pandas>=2.2",
    "python-pptx>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "duckdb>=1.1",
    "google-genai>=2.7.0",
    "altair>=6.2.1",
    "vl-convert-python>=1.9.0.post1",
    "matplotlib>=3.10.9",
    "wordcloud>=1.9.6",
    "squarify>=0.4.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nsight"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: touches the real Attendo files"]
